# SWOT_downUp

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/models/: __init__.py  db.py
app/schemas/: api.py
app/services/: __init__.py  aoi_service.py  config_service.py  downloader_service.py  job_service.py  product_service.py  state.py
app/tasks/: __init__.py  runner.py
app/utils/: __init__.py
configs/: example_aoi.geojson  smoke_earthaccess_small_aoi.yaml  smoke_podaac_small_aoi.yaml  swot_l2_hr_raster_100m_d.yaml
docs/: ARCHITECTURE.md
examples/: run_full_stack.sh  run_swot_karin_100m.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
source/: pyvenv.cfg
swot_downup.egg-info/: SOURCES.txt  requires.txt  top_level.txt
swot_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
swot_pipeline/adapters/: __init__.py  base.py  cmr.py  earthaccess_adapter.py  harmony_adapter.py  podaac_adapter.py  registry.py
swot_pipeline/aoi/: __init__.py  presets.py  service.py
swot_pipeline/auth/: __init__.py
swot_pipeline/catalog/: __init__.py
swot_pipeline/download/: __init__.py  base.py  earthaccess.py  harmony.py  (+2 more)
tests/: test_aoi_parsing.py  test_aoi_validation.py  test_api_endpoints.py  test_chunking_logic.py  test_config.py  test_downloader_registry.py  test_downloader_validation.py  test_filename_date_parsing.py  test_manifest_generation.py  test_product_registry.py  test_qa_masks.py  test_variable_extraction.py
(+22 files in other folders)
